navbar logo done

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,11 @@
+// Sass Variables
 @import "./abstracts/variables";
 
+// bootstrap core imports
 @import "~bootstrap/scss/bootstrap";
+
+// Template CSS variable
 @import "./abstracts/css-variable";
+
+// Template utility imports
+@import "./utilities/sizing";
