--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,5 +7,7 @@
 // Template CSS variable
 @import "./abstracts/css-variable";
 
+// Template Components
+@import "./components/navbar";
 // Template utility imports
 @import "./utilities/sizing";
