--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -23,3 +23,6 @@ $body-color: #0f172a;
 
 $navbar-light-color: $text-muted;
 $navbar-light-active-color: $body-color;
+
+$btn-padding-y: 1rem;
+$btn-padding-x: 1.25rem;
