--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,5 +9,6 @@
 
 // Template Components
 @import "./components/navbar";
+@import "./components/button";
 // Template utility imports
 @import "./utilities/sizing";
